Реализована бизнес-логика над хранилищем S3. Были добавлены методы: - Скачивание одиночного файла без запаковки zip-архива - Скачивание множества файлов/директорий с запаковкой zip-архива со строгой структурой. - Добавлен доп параметр для метода search указывающий уровень вложенности поиска файлов/директории на уровне поиска для разгрузки поиска
